[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bonmark"
version = "0.1.0"
description = "A cross-browser CLI tool for cleaning up exported browser bookmarks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["bookmarks", "browser", "cli", "netscape", "firefox", "chrome"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
bonmark = "bonmark:main"

[project.urls]
Homepage = "https://github.com/berkerb/bonmark"
Changelog = "https://github.com/berkerb/bonmark/blob/master/CHANGELOG.md"
Issues = "https://github.com/berkerb/bonmark/issues"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["bonmark"]
